--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,9 @@ canvas {
 	height: 100%;
 	display: block;
 	background: RGBA(140,0,0,1);
-
 }
 
-#ui{
+#HUD{
 	margin: 0;
 	overflow: hidden;
 	width: 100%;
@@ -22,13 +21,11 @@ canvas {
 	opacity: 0.5;
 }
 
-#resetBtn{
+.ui-button{
 	position: fixed;
-	width: 100px;
-	height: 50px;
+
 	z-index: 3;
-	top: 630px;
-	left: 200px;
+	left: 630px;
 	background: RGBA(50,50,50,1);
 	border: 2px solid RGBA(140,140,140,1);
 	border-radius: 2px;
@@ -37,12 +34,67 @@ canvas {
 	font-family: monospace;
 	font-size: 20px;
 	font-weight: bold;
-}
 
-#resetBtn:hover{
+}
+.ui-button:hover{
 	border: 4px solid RGBA(140,140,140,1);
 	box-shadow: 5px 5px 10px #111111;
+}
 
+#resetBtn{
+	top: 100px;
+	width: 100px;
+	height: 50px;
+}
+
+#autoMoveChecker{
+	top: 160px;
+	width: 100px;
+	height: 50px;
+	border-left: 10px solid RGBA(140,100,100,1);
+}
+
+#HUDToggle{
+	top: 220px;
+	width: 100px;
+	height: 50px;
+	border-left: 10px solid RGBA(100,140,100,1);
+}
+
+.brain-button{
+	position: fixed;
+
+	z-index: 3;
+	top: 548px;
+	background: RGBA(50,50,50,1);
+	border: 2px solid RGBA(140,140,140,1);
+	border-top: 0px solid RGBA(140,140,140,1);
+	border-bottom-right-radius: 6px;
+	border-bottom-left-radius: 6px;
+	color: RGBA(120,120,120,1);
+	box-shadow: 3px 3px 5px #000000;
+	font-family: monospace;
+	font-size: 20px;
+	font-weight: bold;
+
+}
+.brain-button:hover{
+	border: 4px solid RGBA(140,140,140,1);
+	border-top: 0px solid RGBA(140,140,140,1);
+	box-shadow: 5px 5px 10px #111111;
+}
+
+#stupid{
+	left: 160px;
+	width: 100px;
+	height: 50px;
+}
+
+#simple{
+	margin-left: 5px;
+	left: 260px;
+	width: 100px;
+	height: 50px;
 }
 
 #agent-pos{
