--- a/css/hud.css
+++ b/css/hud.css
@@ -6,18 +6,18 @@
 	height: 100%;
 	background: #222;
 	opacity: 0.7;
-  display: none;
+  display: block;
 }
 
 #agent-current-status{
 	position: fixed;
   padding: 0px;
   margin: 0px;
-	width: 500px;
+	width: 410px;
 	height: 80px;
 	text-align: left;
 	margin-left: 160px;
-	margin-top: 45px;
+	margin-top: 18px;
 	font-family: monospace;
 	font-family: cursive;
 	font-size: 20px;
@@ -27,12 +27,17 @@
 .agent-info-cell{
   position: relative;
   display: inline-block;
-  width: 80px;
+  width: 85px;
   height: 90%;
   margin: 0px;
 }
 
-
+.description{
+	font-size: 13px;
+	height: 10px;
+	width: 85px;
+	margin: 0px;
+}
 
 
 #agent-history-holder{
@@ -54,8 +59,8 @@
 	margin-left: 0px;
 	margin-top: 80px;
 	text-align: left;
-	padding-left: 20px;
-	font-size: 10px;
+	padding-left: 10px;
+	font-size: 8px;
 	color: RGBA(100,100,100,1);
 	z-index: 2;
 	font-family: cursive;
