--- a/css/hud.css
+++ b/css/hud.css
@@ -1,7 +1,6 @@
 
-#HUD{
+.HUD{
 	margin: 0;
-	overflow: hidden;
 	width: 100%;
 	height: 100%;
 	background: #222;
@@ -10,14 +9,14 @@
 }
 
 #agent-current-status{
-	position: fixed;
+	top: 0px;
   padding: 0px;
   margin: 0px;
 	width: 410px;
 	height: 80px;
 	text-align: left;
-	margin-left: 160px;
-	margin-top: 18px;
+	margin-left: 250px;
+	padding-top: 28px;
 	font-family: monospace;
 	font-family: cursive;
 	font-size: 20px;
@@ -27,37 +26,35 @@
 .agent-info-cell{
   position: relative;
   display: inline-block;
-  width: 85px;
+  width: 95px;
   height: 90%;
   margin: 0px;
 }
 
 .description{
-	font-size: 13px;
+	font-size: 15px;
 	height: 10px;
-	width: 85px;
+	width: 95px;
 	margin: 0px;
 }
 
 
 #agent-history-holder{
-	position: fixed;
-	overflow: hidden;
-	width: 180px;
-	height: 57px;
-	margin: 0px;
+	float: left;
+	width: 120px;
+	height: 507px;
+	margin-left: 60px;
 	text-align: left;
-	padding-left: 1px;
+
 }
 
 #agent-history{
-	position: fixed;
 	width: 100%;
 	 height: 100%;
-	 overflow: scroll;
+	 overflow: hidden;
 	 padding-right: 17px;
 	margin-left: 0px;
-	margin-top: 80px;
+	margin-top: 20px;
 	text-align: left;
 	padding-left: 10px;
 	font-size: 8px;
@@ -67,21 +64,7 @@
 }
 
 .neutral{	color: RGBA(170, 170,170,1);}
-.green{	color: RGBA(150, 200,150,1) }
-.red{	color: RGBA(200, 150,150,1); }
-.start{	color: RGBA(150, 150,200,1); }
+.green{	color: RGBA(160, 220,150,1) }
+.red{	color: RGBA(220, 160,150,1); }
+.start{	color: RGBA(150, 180,220,1); }
 .history-text{	margin: 0px }
-
-.scroll::-webkit-scrollbar {
-    width: 12px;
-}
-
-.scroll::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-    border-radius: 10px;
-}
-
-.scroll::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
-}
