--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,32 @@
 body{
 	margin: 0;
-	overflow: hidden;
-	background: #ffffff;
+	background: RGBA(20, 20, 20,1.0);
 }
 
-canvas {
-	width: 100%;
-	height: 100%;
-	display: block;
-	background: RGBA(140,0,0,1);
+#all-holder{
+	width: 900px;
+	height: 700px;
+   margin: 0 auto;
+	 padding: 0px;
+	background: RGBA(70,60,70,0.15);
+	box-shadow: 2px 5px 5px RGBA(10,10,10,.3);
+}
+
+canvas{
+	width: 500px;
+	height: 500px;
+	box-shadow: 2px 5px 5px RGBA(20,20,20,.3);
+}
+
+#canvas {
+	position: relative;
+	top: 0px;
+	float: left;
+	left: 50px;
+
+	background: RGBA(140,0,0,0);
 	opacity: 1.0;
+	z-index: 3;
 }
 
 .button{
