--- a/css/ui.css
+++ b/css/ui.css
@@ -1,20 +1,18 @@
 
 .ui-button{
-	position: fixed;
-	z-index: 3;
-	top: 560px;
+	position: relative;
+	margin: 10px;
 	width: 40px;
 	height: 40px;
-	border-radius: 100px;
+	border-radius: 50px;
 	background: RGBA(50,50,50,0);
 	border: 2px solid RGBA(140,140,140,1);
-	border-radius: 100px;
 	color: RGBA(120,120,120,1);
 	font-family: monospace;
-	font-size: 20px;
+	font-size: 15px;
 	font-weight: bold;
-
 }
+
 .ui-button:hover{
 	border: 2px solid RGBA(200,200,200,1);
 	color: RGBA(200,200,200,1);
@@ -23,29 +21,12 @@
 .ui-button:active{
 	border: 2px solid RGBA(140,140,140,1);
 	color: RGBA(120,120,120,1);
-	box-shadow: 0px 0px 0px #99cc99;
+	text-align: center;
 }
 
-#reset-div{
-	left: 160px;
-}
-
-#play-div{
-	left: 210px;
-}
-
-#speed-down-div{
-	left: 260px;
-}
-
-#speed-up-div{
-	left: 310px;
-}
-
-#gauge-div{
-	left: 360px;
-}
-
-#theme-div{
-	left: 410px;
+#ui-holder{
+	width: 480px;
+	height: 100px;
+	z-index: 3;
+	margin-left: 310px;
 }
