--- a/css/hud.css
+++ b/css/hud.css
@@ -5,7 +5,6 @@
 	height: 100%;
 	background: #222;
 	opacity: 0.7;
-  display: block;
 }
 
 #agent-current-status{
@@ -21,6 +20,7 @@
 	font-family: cursive;
 	font-size: 20px;
 	z-index: 1;
+	opacity:0;
 }
 
 .agent-info-cell{
@@ -45,6 +45,7 @@
 	height: 507px;
 	margin-left: 60px;
 	text-align: left;
+	opacity: 0;
 
 }
 
