--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,12 @@ canvas{
 	background: rgba(0, 0, 0, 0);
 }
 
+.button:focus{
+	cursor: default;
+	outline: 0;
+	background: rgba(0, 0, 0, 0);
+}
+
 
 
 button::-moz-focus-inner {
