--- a/css/ui.css
+++ b/css/ui.css
@@ -11,6 +11,7 @@
 	font-size: 15px;
 	font-weight: bold;
 	background: rgba(0, 0, 0, 0);
+	padding: 0px;
 }
 
 .ui-button:hover{
@@ -28,6 +29,7 @@
 
 .ui-button:focus{
 	background: rgba(0, 0, 0, 0);
+	color: RGBA(120,120,120,1);
 }
 
 #ui-holder{
