--- a/css/ui.css
+++ b/css/ui.css
@@ -11,7 +11,7 @@
 	font-size: 15px;
 	font-weight: bold;
 	background: rgba(0, 0, 0, 0);
-	padding: 0px;
+	z-index: 3;
 }
 
 .ui-button:hover{
@@ -29,7 +29,6 @@
 
 .ui-button:focus{
 	background: rgba(0, 0, 0, 0);
-	color: RGBA(120,120,120,1);
 }
 
 #ui-holder{
