--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,7 @@ canvas{
 	outline: 0;
 	background: rgba(0, 0, 0, 0);
 	color: RGBA(120,120,120,1);
+	outline: 0;
 }
 
 .button:hover{
@@ -43,14 +44,8 @@ canvas{
 
 .button:focus{
 	cursor: default;
+	outline: 0;
 }
-
-
-
-button::-moz-focus-inner {
-  border: 0;
-}
-
 
 
 title{
