--- a/css/brain.css
+++ b/css/brain.css
@@ -60,11 +60,10 @@
 	z-index: 3;
 	box-shadow: 2px 5px 5px RGBA(10,10,10,.9);
 }
-
-#random_map{
+#update_squares{
+	border-left: 7px solid RGBA(140,240,140,1);
 
 }
-
-#update_squares{
+#random_map{
 
 }
